fixed a issue in the sign-up page where the selects where unaligned

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
 
 footer {
     padding: 2ch 0 2ch 0;
+    justify-content: space-between;
 }
 
 header,
@@ -50,6 +51,8 @@ main {
 
 label,
 input,
+select,
+option,
 p,
 a {
     margin: 2ch;
